syntax = "proto3";// 版本
package kcwiki.msgtransfer.protobuf; // 命名空间

option java_package = "kcwiki.msgtransfer.protobuf.proto";//生成java包名
option java_outer_classname = "WebsocketNonSystemProto"; //生成Java类名
option java_multiple_files = true;

message WebsocketNonSystem {
    string module = 1;
    string data = 2;
}